# migrave_ros_msgs

./: CMakeLists.txt  README.md  package.xml
actionlib/: GetAverageEngagement.action
games/: UIActivityParameters.msg
interaction/: TherapistFeedback.msg
monitoring/: Component.msg  ComponentState.msg
perception/: Activity.msg  AudioFeatures.msg  BodyPart.msg  Embedding.msg  Face.msg  FaceActionUnit.msg  Faces.msg  NamedColor.msg  NamedShape.msg  Object.msg  ObjectView.msg  Skeleton.msg  Skeletons.msg  SoundDirection.msg
performance/: GameActivity.msg  GamePerformance.msg  OverallGamePerformance.msg
person_state/: AffectiveState.msg  Person.msg
robot_action/: RobotAction.msg
